--- a/kap13.tex
+++ b/kap13.tex
@@ -20,9 +20,9 @@ Hier Graphen
 \subsubsection{Besondere Logarithmen}
 
 $\begin{array}{lcccl}
-\mbox{Logarithmus naturalis}&:&\ln a&:=&\log_ea\\
-\mbox{Logarithmus dualis}&:&\ld a&:=&\log_2a\\
-\mbox{Dekadischer Logarithmus}&:&\lg a&:=&\log_{10}a
+\mbox{Logarithmus naturalis}&:&ln a&:=&\log_ea\\
+\mbox{Logarithmus dualis}&:&ld a&:=&\log_2a\\
+\mbox{Dekadischer Logarithmus}&:&lg a&:=&\log_{10}a
 \end{array}$
 \\
 	
