--- a/kap4.tex
+++ b/kap4.tex
@@ -52,9 +52,10 @@
       \end{tikzpicture}
     \end{center}
   \end{minipage}
-\end{Definition}\\
+\end{Definition}
+
 Es ergeben sich folgende (wissenswerte) Werte:
-\\
+
 \begin{small}\begin{center}
   \begin{tikzpicture}[scale=5.3,cap=round,>=latex,scale=0.8]
     % draw the coordinates
@@ -108,8 +109,9 @@ Es ergeben sich folgende (wissenswerte) Werte:
           (0cm,1.25cm)  node[fill=white] {(\color{blue}0\color{black},\color{red}1\color{black})};
   \end{tikzpicture}
 \end{center}\end{small}
-\\
-Des Weiteren gilt:\\
+
+Des Weiteren gilt:
+
 \begin{center}
   \begin{tabu} to 0.9\textwidth{| X[c] | X[c] | X[c] | X[c] |}
     \hline
@@ -248,8 +250,10 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
 \\
 
 \begin{minipage}[t]{0.5\textwidth}
-  \textbf{Nullstellen}\\
-  \underline{Notwendige und hinreichende Bedingung:}\\
+  \textbf{Nullstellen}
+
+  \underline{Notwendige und hinreichende Bedingung:}
+
   \begin{align*}
     f(x)                                        &=0\\
     \Leftrightarrow 2\cos(x)+2\sin(x)\cos(x)    &=0\\
@@ -268,13 +272,15 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
     \left\{ \begin{array}{rccl}
       x_1&=&\dfrac{1}{2}\pi&  \\\\
       x_2&=&\dfrac{3}{2}\pi&
-    \end{array} \\
+    \end{array} 
+
     \Rightarrow \mathbb{L} &= \left \{ \left( \dfrac{1}{2} \pi \middle| 0 \right) ; \left( \dfrac{3}{2} \pi \middle| 0 \right) \right\}
   \end{align*}
 \end{minipage}
 \vline
 \begin{minipage}[t]{0.5\textwidth}
-  \textbf{Ableitungen}\\
+  \textbf{Ableitungen}
+
     \begin{align*}
       f'(x)&=-2\sin(x)+2(\cos(x)\cos(x)-\sin(x)\sin(x))\\
       &=-2\sin(x)+2(\cos^2(x)-\sin^2(x))\\
@@ -287,28 +293,36 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
       &=16\sin^2(x)+2\sin(x)-8
     \end{align*}#
 \end{minipage}
-\\\\
 
-\textbf{Extremstellen}\\
+\textbf{Extremstellen}
 
 \begin{minipage}[t]{0.5\textwidth}
-  \underline{Notwendige Bedingung:}\\
-    $f'(x)&=0$\\
-    $\Leftrightarrow4\sin^2(x)-2\sin(x)+2&=0$\\
-    Substitution: $y&=\sin(x)$\\
-    $\Rightarrow4y^2-2y+2=0$\\
-    $\stackrel{ABC-Formel}{\Rightarrow}y_{1,2}=\dfrac{2\pm\sqrt{(-2)^2-4*(-4)*2}}{-8}$\\
-    Resubsitution:\\
+  \underline{Notwendige Bedingung:}
+  
+    $f'(x)=0$
+
+    $\Leftrightarrow4\sin^2(x)-2\sin(x)+2&=0$
+
+    Substitution: $y&=\sin(x)$
+
+    $\Rightarrow4y^2-2y+2=0$
+
+    $\stackrel{ABC-Formel}{\Rightarrow}y_{1,2}=\dfrac{2\pm\sqrt{(-2)^2-4*(-4)*2}}{-8}$
+
+    Resubsitution:
+
     $\Rightarrow
     \left\{\begin{array}{rccl}
       \sin(x)&=\dfrac{2+\sqrt{20}}{-8}\\
       \sin(x)&=\dfrac{2-\sqrt{20}}{-8}
-    \end{array}\right\\
+    \end{array}\right
+
     \Rightarrow\mathbb{L}=\left\{\dfrac{1}{6}\pi;\dfrac{5}{6}\pi;\dfrac{3}{2}\pi\right\}$
 \end{minipage}
 \vline
 \begin{minipage}[t]{0.5\textwidth}
-  \underline{Hinreichende Bedingung:}\\
+  \underline{Hinreichende Bedingung:}
+
     $f''(x)&\neq0$\\
     \Rightarrow
     \left\{\begin{array}{rccl}
