--- a/kap5.tex
+++ b/kap5.tex
@@ -8,17 +8,17 @@
     \begin{Definition}
         Ein Vektor ist Element eines Vektorraums.
     \end{Definition}
-    \\
 
-    \paragraph{} Vektorräume, wir erinnern uns zurück. Verknüpfungen, inverse Elemente und die dazugehörenden Gesetze, konsequente Definitionen und
-    mathematische Korrektheit, die guten alten Zeiten...\\
-    Tatsächlich kann ein Vektor in den meisten Fällen als Verschiebung bezeichnet werden, \textbf{nicht aber als Pfeil oder Strich!}\\
+    Vektorräume, wir erinnern uns zurück. Verknüpfungen, inverse Elemente und die dazugehörenden Gesetze, konsequente Definitionen und
+    mathematische Korrektheit, die guten alten Zeiten...
+
+    Tatsächlich kann ein Vektor in den meisten Fällen als Verschiebung bezeichnet werden, \textbf{nicht aber als Pfeil oder Strich!}
 
 
     \subsection{Besondere Vektoren}
       \begin{Definition}[- Der Ortsvektor]
         Der Vektor von $O$ auf den Punkt $P$, geschrieben als $\vv{OP}$ oder $\vv{p}$.
-        \\
+        
         Hat $P$ die Koordinaten $(P_1|P_2|...|P_n)$, so besitzt $\vv{p}$ die Darstellung $\left(\begin{array}{c} P_1 \\ P_2 \\ ...\\P_n\end{array}\right)$.
       \end{Definition}
 
@@ -108,7 +108,7 @@
     \subsection{Basistransformation}
 
         \begin{Theorem}[- Basistransformation]
-            \paragraph{} Bilden die Vektoren $\vv{a_1},\vv{a_2},...,\vv{a_n}$ eine Basis des $n$-dimensionalen Vektorraums $V$ und sei der Vektor
+            Bilden die Vektoren $\vv{a_1},\vv{a_2},...,\vv{a_n}$ eine Basis des $n$-dimensionalen Vektorraums $V$ und sei der Vektor
              $\vv{v}=\left(\begin{array}{c}{v_1\\v_2\\...\\v_n}\end{array}\right);\vv{v}\in V$. Dann gilt wie üblich:
              $\vv{v}=v_1\cdot\vv{a_1}+v_2\cdot\vv{a_2}+...+v_n\cdot\vv{a_n}$. Sei eine weitere Basis $\vv{b_1},\vv{b_2},...,\vv{b_n}$ des selben Vektorraumes,
               so besitzt der Vektor $\vv{v}$ andere Koordinaten: $\vv{v}=\left(\begin{array}{c}{v'_1\\v'_2\\...\\v'_n}\end{array}\right)$.
@@ -216,12 +216,12 @@
           \end{tikzpicture}
         \end{minipage}
 
-         \paragraph{} So ergibt sich $\alpha = \angle ABC = \angle ac = (\vv{BA},\vv{BC}) = \frac{\pi}{3}$. Ein Winkel $\alpha$ wird zudem meist derart angegeben, dass $\alpha \in [-\pi,\pi]$ oder $\alpha \in [0, 2\pi]$ gilt. Dies bedeutet, dass man nur Winkel zwischen $0°$ und $180°$ erhält, im mathematisch positiven und negativen Sinn. Diese Einschränkung kennzeichnet man mit dem Ausdruck \glqq \textbf{modulo $2\pi$}\grqq.
+         So ergibt sich $\alpha = \angle ABC = \angle ac = (\vv{BA},\vv{BC}) = \frac{\pi}{3}$. Ein Winkel $\alpha$ wird zudem meist derart angegeben, dass $\alpha \in [-\pi,\pi]$ oder $\alpha \in [0, 2\pi]$ gilt. Dies bedeutet, dass man nur Winkel zwischen $0°$ und $180°$ erhält, im mathematisch positiven und negativen Sinn. Diese Einschränkung kennzeichnet man mit dem Ausdruck \glqq \textbf{modulo $2\pi$}\grqq.
 
 
     \subsection{Rechnungen mit Winkeln}
 
-        \paragraph{} Bei Berechnungen von Winkeln zwischen Vektoren geht man genau wie in der elementaren Geometrie vor.
+        Bei Berechnungen von Winkeln zwischen Vektoren geht man genau wie in der elementaren Geometrie vor.
          So wird die Differenz zwischen zwei Winkeln $\theta_{1}$ und $\theta_{2}$ wie gehabt berechnet: $\Delta\theta = \theta_{1} - \theta_{2}$.
          Jedoch benötigt man weitere Rechenregeln, um mit Winkeln rechnen zu können.
         \\
@@ -338,7 +338,7 @@
 
 \section{Linearkombination}
 
-    \paragraph{} Vektoren lassen sich allgemein mit der additiven Verknüpfung des Vektorraums verknüpfen.
+    Vektoren lassen sich allgemein mit der additiven Verknüpfung des Vektorraums verknüpfen.
     Diese Verknüpfung zwischen zwei beliebigen Vektoren $\vv{v}$ und $\vv{u}$ erfolgt, wie auch schon im Teil Verbindungsvektor gezeigt wird, wie
     folgt: $\vv{v}+\vv{u}=\left(\begin{array}{c}{v_1+u_1 \\ v_2+u_2 \\ ... \\ v_n+u_n}\end{array}\right)$. Anschaulich wird $\vv{u}$ an $\vv{v}$
     angehängt und der Schaft von $\vv{v}$ mit der Spitze von $\vv{u}$ verbunden, um den neuen Vektor zu bilden.
@@ -348,7 +348,7 @@
          \\$r_1\cdot\vv{a_1}+r_2\cdot\vv{a_2}+...+r_n\cdot\vv{a_n}=\vv{0};r_i\in\R$ nicht nur die triviale Lösung $r_1=r_2=...=r_n=0$ besitzt.
          Existiert nur diese Lösung, ist die Familie linear unabhägig.
     \end{Definition}
-    \paragraph{} Anders gesagt, ist eine Familie von Vektoren linear abhängig, wenn sich einzelne Vektoren dieser Familie als Linearkombination von
+    Anders gesagt, ist eine Familie von Vektoren linear abhängig, wenn sich einzelne Vektoren dieser Familie als Linearkombination von
     einer beliebigen Anzahl anderer Vektoren der Familie darstellen lassen.
     \\
     \begin{Bemerkung}
@@ -362,7 +362,7 @@
 
 \section{Skalarprodukt}
 
-    \paragraph{} Das Skalarprodukt ist eine ("multiplikative") Verknüpfung des Vektorraums. Seinen Namen trägt es, da es aus zwei Vektoren
+    Das Skalarprodukt ist eine ("multiplikative") Verknüpfung des Vektorraums. Seinen Namen trägt es, da es aus zwei Vektoren
     einen Skalar, alias eine Zahl macht. Es dient dazu ein Maß für den Winkel, den zwei Vektoren $\vv{u}$ und $\vv{v}$ einschließen,
     festzulegen. Zudem lässt sich von dieser Definition aus der Winkel selber anhand der
     \begin{wrapfigure}[4]{r}[1cm]{0.45\textwidth}
@@ -422,7 +422,7 @@
 
 \section{Kreuzprodukt}
 
-    \paragraph{} Das Kreuzprodukt ist das zweite nützliche Werkzeug, welches in der Vektorgeometrie genutzt wird. Es dient hauptsächlich zur einfachen Berechnung
+    Das Kreuzprodukt ist das zweite nützliche Werkzeug, welches in der Vektorgeometrie genutzt wird. Es dient hauptsächlich zur einfachen Berechnung
     eines zu zwei \textbf{nicht kollinearen} Vektoren $\vv{u}$ und $\vv{v}$ orthogonalen Vektors $\vv{i}$. \\
     \begin{Definition}
       $$\vv{i} = \vv{u} \times \vv{v} \definedBy \left(\begin{array}{c} u_{\textcolor{red}{2}} \cdot v_{\textcolor{orange}{3}} - u_{\textcolor{red}{3}} \cdot v_{\textcolor{orange}{2}} \\ u_{\textcolor{red}{3}} \cdot v_{\textcolor{orange}{1}} - u_{\textcolor{red}{1}} \cdot v_{\textcolor{orange}{3}} \\ u_{\textcolor{red}{1}} \cdot v_{\textcolor{orange}{2}} - u_{\textcolor{red}{2}} \cdot v_{\textcolor{orange}{1}} \end{array}\right)$$
@@ -449,7 +449,7 @@
         \end{align*}
     \end{Beweis}
     \begin{Bemerkung}
-        \paragraph{} $\vv{u} \times \vv{v} = 0 \Leftrightarrow \vv{u} \parallel \vv{v} (\vv{u} = r \cdot \vv{v};r\in\R)$
+        $\vv{u} \times \vv{v} = 0 \Leftrightarrow \vv{u} \parallel \vv{v} (\vv{u} = r \cdot \vv{v};r\in\R)$
     \end{Bemerkung}
     \\\\
     Zudem gilt:
@@ -457,7 +457,7 @@
         \qquad \qquad \qquad |\vv{i}| &= |\vv{u}| \cdot (\sin(\alpha) \cdot |\vv{v}|) \\
                                       &= |\vv{u}| \cdot \left(\sin\left(\cos^{-1}\left(\dfrac{\vv{u} \odot \vv{v}}{|\vv{u}| \cdot |\vv{v}|}\right)\right) \cdot |\vv{v}|\right) \\
     \end{align*}
-    \paragraph{} Einfacher gesagt ist der Betrag des Vektors $\vv{i}$ gleich der Fläche des Parallelogramms, welches die zwei Vektoren $\vv{u}$ und $\vv{v}$
+    Einfacher gesagt ist der Betrag des Vektors $\vv{i}$ gleich der Fläche des Parallelogramms, welches die zwei Vektoren $\vv{u}$ und $\vv{v}$
     aufspannen. Um diese doch recht verwirrende Erklärung etwas zu verdeutlichen folgt eine visuelle Darstellung:
     \\
     \\
@@ -510,7 +510,7 @@
 
     \subsection{Darstellungen}
 
-        \paragraph{} Eine Gerade ist ein sehr bekannter Bestandteil der elementaren Geometrie. Bezogen auf die Vektorgeometrie ist sie nichts anderes als ein
+        Eine Gerade ist ein sehr bekannter Bestandteil der elementaren Geometrie. Bezogen auf die Vektorgeometrie ist sie nichts anderes als ein
         unendlich langer Vektor, beziehungsweise eine Linearkombination aus unendlich vielen (identischen / kollinearen) Vektoren. Somit ergibt sich die
         eindeutige \textbf{Parameterform} einer Geraden $g$ : \quad$g:\vv{x}=\textcolor{blue}{\vv{q}}+s\cdot\textcolor{red}{\vv{u}};s\in\R$. Diese Schreibweise
         beschreibt die der Geraden zugehörigen Punktmenge. Der Vektor $\vv{q}$ bestimmt die \textcolor{blue}{Position} der Geraden im Raum und trägt folglich
@@ -518,7 +518,7 @@
         wird.
         \\
         \begin{Bemerkung}
-            \paragraph{} Die Parameterform ist die einzige mögliche Darstellungsform einer Geraden im $\R^3$, da ihr Normalvektor nicht eindeutig bestimmt
+            Die Parameterform ist die einzige mögliche Darstellungsform einer Geraden im $\R^3$, da ihr Normalvektor nicht eindeutig bestimmt
             werden kann. Im $\R^2$ jedoch ist dies möglich, ähnlich wie für Kreise. Zudem kann eine Gerade in Koordinatenform durch \textbf{die
             Schnittmenge zweier Ebenen} beschrieben werden (siehe auch\glqq 5.7.3 Lagebeziehungen zwischen Ebenen\grqq).
         \end{Bemerkung}
@@ -548,7 +548,7 @@
 
     \subsection{Lagebeziehungen zwischen Geraden}
 
-        \paragraph{} Es gibt bezüglich Geraden vier verschiedene Beziehungen, vorausgesetzt diese befinden sich im $\R^3$. Zwei Geraden $g$ und $h$ können...\\
+        Es gibt bezüglich Geraden vier verschiedene Beziehungen, vorausgesetzt diese befinden sich im $\R^3$. Zwei Geraden $g$ und $h$ können...\\
 
         \begin{minipage}[t]{0.5\textwidth}
         \begin{left}
@@ -648,7 +648,7 @@
         \end{center}
         \end{minipage}
 
-        \paragraph{} Die Lagebeziehung zwischen zwei Geraden $g$ und $h$ lässt sich wie folgt ermitteln:
+        Die Lagebeziehung zwischen zwei Geraden $g$ und $h$ lässt sich wie folgt ermitteln:
 
             \begin{tikzpicture}[>=triangle 45]
                 \draw (0,0) node{$\exists t\in\R\quad\textcolor{red}{\vv{u_1}} = t\cdot\textcolor{red}{\vv{u_2}}?$};
@@ -684,18 +684,18 @@
     \subsection{Abstand zu einem Punkt}
 
         \begin{Definition}
-            \paragraph{} Der \textbf{Lotfußpunkt} $L$ einer Geraden $g:\vv{x}=\vv{q}+t\cdot\vv{u};t\in\R$ zu einem Punkt $P\notin g$
+            Der \textbf{Lotfußpunkt} $L$ einer Geraden $g:\vv{x}=\vv{q}+t\cdot\vv{u};t\in\R$ zu einem Punkt $P\notin g$
             ist definiert durch: $\vv{LP}\odot\vv{u}=0$. Er ist somit der dem Punkt $P$ am nähesten gelegenen Punkt der Gerade $g$ und wird
             folglich hauptsächlich zur Abstandsberechnung genutzt.
         \end{Definition}
 
-        \paragraph{} Der Abstand von einer Geraden $g$ zu einem Punkt $P$ ist äquivalent zur \textbf{Norm des Verbindungsvektors $\vv{LP}$}, wobei $L$
+        Der Abstand von einer Geraden $g$ zu einem Punkt $P$ ist äquivalent zur \textbf{Norm des Verbindungsvektors $\vv{LP}$}, wobei $L$
         der Lotfußpunkt der Geraden $g$ zu $P$ ist. Für die Berechnung des Abstands gibt es drei verschiedene Lösungsansätze (OHG) von denen zwei
         gebräuchlicher sind als der dritte.
         \\
         \\
         \underline{\textbf{Orthogonalität}}:
-            \paragraph{} Da die Norm des Verbindungsvektors gesucht wird, gilt es nun diesen eindeutig zu bestimmen. Folgender Ablauf führt
+            Da die Norm des Verbindungsvektors gesucht wird, gilt es nun diesen eindeutig zu bestimmen. Folgender Ablauf führt
             zum Ziel:
                 \begin{enumerate}[1)]
                     \item \label{a} Punkt L auf der Geraden $g$ in Abhängigkeit des Faktors des Richtungsvektors bestimmen:
@@ -727,7 +727,7 @@
         \\
         \\
         \underline{\textbf{Hilfsebene}}:
-            \paragraph{} Diese Methode hat sich Platz zwei erkämpft:
+            Diese Methode hat sich Platz zwei erkämpft:
                 \begin{enumerate}[1)]
                     \item Hilfsebene $E$ bestimmen ($\vv{n}\equiv\textcolor{red}{\vv{u}}\quad P\in E$, da die Gerade $g$ die Ebene im rechten Winkel durchstößt und
                     der Verbindungsvektor somit orthogonal zur Geraden ist):
@@ -747,7 +747,7 @@
         \\
         \\
         \underline{\textbf{Grenzwertberechnung}}:
-            \paragraph{} Zu guter Letzt wollen wir die Analysis Fanatiker befriedigen:
+            Zu guter Letzt wollen wir die Analysis Fanatiker befriedigen:
                 \begin{enumerate}[1)]
                     \item Siehe Schritt \ref{a} Orthogonalität
                     \item Siehe Schritt \ref{b} Orthogonalität
@@ -775,7 +775,7 @@
                         \Leftrightarrow 0 &= 2(\textcolor{red}{u_1}^2 + \textcolor{red}{u_2}^2 + \textcolor{red}{u_3}^2)t + 2((\textcolor{blue}{q_1} - p_1) \cdot \textcolor{red}{u_1} + (\textcolor{blue}{q_2} - p_2) \cdot \textcolor{red}{u_2} + (\textcolor{blue}{q_3} - p_3) \cdot \textcolor{red}{u_3} \\
                         \Leftrightarrow t &= \dfrac{\textcolor{red}{u_1} \cdot (p_1 - \textcolor{blue}{q_1}) + \textcolor{red}{u_2} \cdot (p_2 - \textcolor{blue}{q_2}) + \textcolor{red}{u_3} \cdot (p_3 - \textcolor{blue}{q_3})}{\textcolor{red}{u_1}^2 + \textcolor{red}{u_2}^2 + \textcolor{red}{u_3}^2}
                     \end{align*}
-                    \paragraph{} Die hinreichende Bedingung ist nicht zu prüfen, sie gilt (der Minimalabstand existiert immer), und die Art des Extremwerts
+                    Die hinreichende Bedingung ist nicht zu prüfen, sie gilt (der Minimalabstand existiert immer), und die Art des Extremwerts
                     ist ebenfalls vorbestimmt, da der Verbindungsvektor unendlich lang wird wenn man den Lotfußpunkt in beide Richtungen entlang der
                     Geraden verschiebt.
                     \item Siehe Schritt \ref{d} Orthogonalität
@@ -783,12 +783,12 @@
                 \end{enumerate}
         \\
         \begin{Bemerkung}
-            \paragraph{} Wie sich unschwer erkennen lässt, sind die Formeln für die Berechnung von t bei allen drei Lösungsansätzen identisch. Die Methoden
+            Wie sich unschwer erkennen lässt, sind die Formeln für die Berechnung von t bei allen drei Lösungsansätzen identisch. Die Methoden
             unterscheiden sich somit nur am Anfang voneiander.
         \end{Bemerkung}
         \\
         \begin{Bemerkung}
-            \paragraph{} Zur Abstandsberechnung gibt es eine allgemeine Formel, welche die oben aufgelisteten Vorgehensweisen überflüssig macht. Da sie
+            Zur Abstandsberechnung gibt es eine allgemeine Formel, welche die oben aufgelisteten Vorgehensweisen überflüssig macht. Da sie
             für das Abitur allerdings nicht zugelassen ist, wird sie hier nicht bewiesen beziehungsweise graphisch ergänzt:
             $d(g,P) = \dfrac{|\textcolor{red}{\vv{u}}\times\vv{\textcolor{blue}{Q}P}|}{|\textcolor{red}{\vv{u}}|}$.
         \end{Bemerkung}
@@ -796,17 +796,17 @@
 
     \subsection{Abstand zweier Geraden}
 
-        \paragraph{} Zwei nicht sich schneidende oder identische Geraden haben einen \textbf{eindeutig definierten Minimalabstand}. Bei zwei parallelen
+        Zwei nicht sich schneidende oder identische Geraden haben einen \textbf{eindeutig definierten Minimalabstand}. Bei zwei parallelen
         Geraden ist dies einfach zu visualisieren, der Abstand zweier windschiefer Geraden jedoch weniger. Im Folgenden sollen beide Fälle untersucht werden.
         \\
         \\
         \underline{\textbf{Parallele Geraden}}:
-            \paragraph{} Der Abstand zweier paralleler Geraden $g$ und $h$ entspricht genau dem Abstand eines Punktes $P \in g \lor P\in h$ zur jeweiligen
+            Der Abstand zweier paralleler Geraden $g$ und $h$ entspricht genau dem Abstand eines Punktes $P \in g \lor P\in h$ zur jeweiligen
             gegenüberliegenden Geraden. Somit genügt es den Abstand zwischen zwischen dem Stützpunkt einer Geraden und der anderen zu berechnen.
         \\
         \\
         \underline{\textbf{Windschiefe Geraden}}:
-            \paragraph{} Der minimale Abstand zweier windschiefer Geraden lässt sich mithilfe einer \textbf{Hilsebene} verbildlichen und bestimmen. Gegeben
+            Der minimale Abstand zweier windschiefer Geraden lässt sich mithilfe einer \textbf{Hilsebene} verbildlichen und bestimmen. Gegeben
             seien zwei Geraden
             $g:\vv{x} = \textcolor{blue}{\vv{p}} + r \cdot \textcolor{red}{\vv{u}}; r\in\R$ und $h:\vv{x} = \textcolor{blue}{\vv{q}} + s \cdot \textcolor{orange}{\vv{v}}; s\in \R$.
             Daraus folgt, dass:
@@ -816,7 +816,7 @@
             sich sich den Teil \glqq Abstand zu einem Punkt\grqq \text{ }unter Ebenen zuzuwenden.
         \\
         \begin{Bemerkung}
-            \paragraph{} Zur Berechnung des Abstands zweier windschiefer Geraden gibt es zudem eine Formel, welche zugleich das
+            Zur Berechnung des Abstands zweier windschiefer Geraden gibt es zudem eine Formel, welche zugleich das
             \textbf{Ergebnis des Skalarprodukts} veranschaulicht. Aus zwei Geraden
             \begin{center}
                 \qquad $g:\vv{x} = \vv{p} + r \cdot \vv{u}; r\in\R$ \qquad und \qquad $h:\vv{x} = \vv{q} + s \cdot \vv{v}; s\in\R$
@@ -835,7 +835,7 @@
 
     \subsection{Darstellungen}
 
-        \paragraph{} Die Darstellung einer Ebene beinhaltet immer die gleichen Informationen: Ihre \textcolor{blue}{Position} im Raum und ihre
+        Die Darstellung einer Ebene beinhaltet immer die gleichen Informationen: Ihre \textcolor{blue}{Position} im Raum und ihre
         \textcolor{red}{Ausrichtung}:\\
         \begin{center}
             \begin{tabular}{@{} *2l @{}}
@@ -846,7 +846,7 @@
             \end{tabular}
         \end{center}
 
-        \paragraph{} Die erste bei Geraden bereits eingeführte Form ist leicht zu verstehen. An den Stützvektor setzt man anschließend einen
+        Die erste bei Geraden bereits eingeführte Form ist leicht zu verstehen. An den Stützvektor setzt man anschließend einen
         zweiten Richtungsvektor; die beiden Vektoren werden \textbf{Spannvektoren} genannt, da sie gemeinsam die Ebene aufspannen. Da man
         sich über diese beliebig in zwei Dimensionen bewegen kann, ist jeder Punkt in einer Ebene erreichbar. Bei der Bildung der Ebene muss
         man beachten, dass die Spannvektoren \textbf{nicht kollinear} sind. In diesem Fall erhält man wieder eine Gerade.
@@ -883,7 +883,7 @@
             \end{tikzpicture}
         \end{center}
 
-        \paragraph{} Die Normalenform und Koordinatenform sind weitaus weniger intuitiv und erfordern eine genauere Erklärung. Sie lässt sich
+        Die Normalenform und Koordinatenform sind weitaus weniger intuitiv und erfordern eine genauere Erklärung. Sie lässt sich
         zudem leichter anhand einer Graphik erklären:
 
         \begin{center}
@@ -915,13 +915,13 @@
             \end{tikzpicture}
         \end{center}
 
-        \paragraph{} Somit ist jeder Punkt $X\in E$, wenn der Verbindingsvektor $(\vv{x}-\textcolor{blue}{\vv{q}})$ orthogonal zum Vektor
+        Somit ist jeder Punkt $X\in E$, wenn der Verbindingsvektor $(\vv{x}-\textcolor{blue}{\vv{q}})$ orthogonal zum Vektor
         $\textcolor{red}{\vv{n}}$ ist. Dabei spielt die Position des sogenannten \textbf{Normalenvektors} keine Rolle, ebenso wenig wie seine
         Norm. Allein seine Ausrichtung bestimmt die der Ebene. Um die Position im Raum genau zu bestimmen, benötigt man zudem einen Punkt
         $\textcolor{blue}{Q}\in E$. Diese zusätzliche Information schließt alle anderen parallelen Ebenen aus, die durch einen kollinearen
         Normalenvektor defniert sind.
 
-        \paragraph{} Aus der Normalenform lässt sich die Koordinatenform ableiten. Man macht häufiger Gebrauch von letzterer, da sich leichter
+        Aus der Normalenform lässt sich die Koordinatenform ableiten. Man macht häufiger Gebrauch von letzterer, da sich leichter
         mit ihr rechnen lässt. Man bildet sie wie folgt:
         \begin{align*}
                                   &E:(\vv{x} - \textcolor{blue}{\vv{q}}) \odot \textcolor{red}{\vv{n}} = 0 \\
@@ -930,7 +930,7 @@
         \end{align*}
 
         \begin{Bemerkung}
-            \paragraph{} Ebenen lassen sich auch mittels \textbf{Spurpunkten} und \textbf{Spurgeraden} lokalisieren. Spurpunkte sind die
+            Ebenen lassen sich auch mittels \textbf{Spurpunkten} und \textbf{Spurgeraden} lokalisieren. Spurpunkte sind die
             der Achsen des Koordinatensystems, welche in der Ebene enthalten sind. Aus diesen lassen sich anschließend die Spurgeraden bilden
             (durch Verbinden der Punkte). Folgende Möglichkeiten bieten sich an:
             \begin{enumerate}[1)]
@@ -943,7 +943,7 @@
             \end{enumerate}
         \end{Bemerkung}
 
-        \paragraph{} Drei beziehungsweise zwei (falls man Normalenform und Koordinatenform als eine ansieht) verschiedene Darstellungsweisen
+        Drei beziehungsweise zwei (falls man Normalenform und Koordinatenform als eine ansieht) verschiedene Darstellungsweisen
         sind zwar interessant und eine nicht ganz unwichtige Überlegung, jedoch scheint das auf den ersten Blick unnütz. Im Laufe dieser section
         wird sich der jeweilige Nutzen noch offenbaren. Dann wird einem auch deutlich, dass es manchmal von Vorteil sein kann die Formen
         umzuformen. Die Herangehensweisen für jede Umformung unterscheiden sich nur wenig voneiander, Folgendes Diagramm stellt eine Möglichkeit
@@ -985,7 +985,7 @@
 
     \subsection{Lagebeziehungen zwischen Ebenen und Geraden}
 
-        \paragraph{} Ebenen und Geraden können im Gegensatz zu zwei Geraden nur eine von den drei folgenden Beziehungen
+        Ebenen und Geraden können im Gegensatz zu zwei Geraden nur eine von den drei folgenden Beziehungen
         zueinander haben. Eine Ebene $E$ und eine Gerade $g$ können...\\
 
         \begin{minipage}[t]{0.5\textwidth}
@@ -1064,7 +1064,7 @@
         \end{center}
         \end{minipage}
         \end{center}
-        \paragraph{} Die Lagebeziehung zwischen einer Ebene $E$ und einer Geraden $g$ lässt sich wie folgt ermitteln:
+        Die Lagebeziehung zwischen einer Ebene $E$ und einer Geraden $g$ lässt sich wie folgt ermitteln:
 
         \begin{center}
             \begin{tikzpicture}[>=triangle 45,scale=0.6]
@@ -1091,7 +1091,7 @@
 
     \subsection{Lagebeziehungen zwischen Ebenen}
 
-        \paragraph{} Ebenen teilen bezüglich ihrer Lage zueinander eine Eigenschaft mit einer Ebene und einer Geraden.
+        Ebenen teilen bezüglich ihrer Lage zueinander eine Eigenschaft mit einer Ebene und einer Geraden.
         Zwei Ebenen $E_1$ und $E_2$ können ebenfalls:\\
         \begin{minipage}[t]{0.5\textwidth}
         \begin{left}
@@ -1155,7 +1155,7 @@
         \end{minipage}
         \end{center}
 
-        \paragraph{} Die Lagebeziehung zwischen zwei Ebenen $E_1$ und $E_2$ lässt sich wie folgt ermitteln:
+        Die Lagebeziehung zwischen zwei Ebenen $E_1$ und $E_2$ lässt sich wie folgt ermitteln:
 
         \begin{center}
             \begin{tikzpicture}[>=triangle 45]
@@ -1180,7 +1180,7 @@
         \end{center}
         \\
         \\
-        \paragraph{} Für die Berechnung der Schnittgeraden gibt es unterschiedliche Ansätze abhängig von der
+        Für die Berechnung der Schnittgeraden gibt es unterschiedliche Ansätze abhängig von der
         Ausgangssituation, welche durch die zwei möglichen Darstellungsweisen von Ebenen bedingt sind. Drei mögliche
         Fälle können auftreten:
         \begin{enumerate}[1)]
@@ -1192,7 +1192,7 @@
 
     \subsection{Winkel zwischen Ebenen (und Geraden)}
 
-        \paragraph{} Die einzige bisher angesprochene Möglichkeit den Winkel zwischen zwei geometrischen Formen zu
+        Die einzige bisher angesprochene Möglichkeit den Winkel zwischen zwei geometrischen Formen zu
         ermitteln macht sich der Definition des Skalarprodukts zunutze. Wie bereits erläutert gilt:
         $\cos(\alpha)=\dfrac{\vv{v}\odot\vv{u}}{|\vv{v}|\cdot|\vv{u}|}$. Hierbei soll erneut hervorgehoben werden, dass
         der Winkel der "kleinere"  der beiden möglichen ist. Den anderen erhält man in Abhängigkeit des ersten.
@@ -1281,7 +1281,7 @@
 
     \subsection{Abstand zu einem Punkt}
 
-        \paragraph{} Eine simple und intuitive Art den Abstand einer Ebene $E$ zu einem Punkt $P$ zu bestimmen, wäre eine Gerade
+        Eine simple und intuitive Art den Abstand einer Ebene $E$ zu einem Punkt $P$ zu bestimmen, wäre eine Gerade
         zu erstellen, welche durch $P$ geht und die als Richtungsvektor den Normalenvektor $E$s hat, da $\textcolor{red}{\vv{n}}$
         per Definition orthogonal zu $E$ ist und somit ein anderer kollinearer Vektor den "schnellst möglichsten Weg zum Punkt"
         darstellt. Anschließend müsste man den Schnittpunkt der Geraden und $E$ und die Norm des somit erhaltenen Vektors berechnen.
@@ -1339,19 +1339,19 @@
         \end{center}
 
         \definecolor{gree}{rgb}{0,0.4,0}
-        \paragraph{} Anhand dieser Graphik lässt sich die Formel zur Berechnung des Abstands eines Punktes zu einer Ebene ablesen:
+        Anhand dieser Graphik lässt sich die Formel zur Berechnung des Abstands eines Punktes zu einer Ebene ablesen:
         $\textcolor{gree}{d} = \dfrac{|\textcolor{red}{\vv{n}} \odot (\vv{p} - \textcolor{blue}{\vv{q}})|}{|\textcolor{red}{\vv{n}}|}$
 
         \begin{Beweis}
             \definecolor{gree}{rgb}{0,0.4,0}
             \underline{$\vv{FP} = r \cdot \textcolor{red}{\vv{n}} ; r \in \R^{+}$}:
             \\
-            \paragraph{} Nach Theoremen der Trigonometrie und der Definition des Skalarprodukts gilt:
+            Nach Theoremen der Trigonometrie und der Definition des Skalarprodukts gilt:
             \begin{align*}
                 \qquad \qquad cos(\alpha) &= \dfrac{\textcolor{gre}{d}}{|\vv{\textcolor{blue}{Q}P}|} \\
                               cos(\alpha) &= \dfrac{\textcolor{red}{\vv{n}} \odot \vv{\textcolor{blue}{Q}P}}{|\textcolor{red}{\vv{n}}| \cdot |\vv{\textcolor{blue}{Q}P}|} \\
             \end{align*}
-            \paragraph{} Daraus folgt:
+            Daraus folgt:
             \begin{align*}
                 \qquad \qquad \dfrac{\textcolor{gree}{d}}{|\vv{\textcolor{blue}{Q}P}|} &= \dfrac{\textcolor{red}{\vv{n}} \odot \vv{\textcolor{blue}{Q}P}}{|\textcolor{red}{\vv{n}}| \cdot |\vv{\textcolor{blue}{Q}P}|} \\
                                                                                      d &= \dfrac{\textcolor{red}{\vv{n}} \odot \vv{\textcolor{blue}{Q}P}}{|\textcolor{red}{\vv{n}}|} \\
@@ -1373,11 +1373,11 @@
 
 \section{Kreise und Sphären}
 
-    \paragraph{} Letzte relevant Objektgruppe ist die der Kreise und Sphären, wobei Letztere lediglich auf den $\R^3$ angewandte Formen der Ersten sind.
+    Letzte relevant Objektgruppe ist die der Kreise und Sphären, wobei Letztere lediglich auf den $\R^3$ angewandte Formen der Ersten sind.
 
     \subsection{Kreise}
 
-        \paragraph{} Kreise werden über einen \textbf{Mittelpunkt} und einen \textbf{Radius} definiert. Alle Punkte, welche einen Distanz gleich dem Radius zum Mittelpunkt aufweisen, sind teil der Kreismenge, die den Kreis algebraisch beschreibt. Wie bei allen anderen Sektoren der Geometrie ist es von Nöten, das Ganze zu visualisieren:
+        Kreise werden über einen \textbf{Mittelpunkt} und einen \textbf{Radius} definiert. Alle Punkte, welche einen Distanz gleich dem Radius zum Mittelpunkt aufweisen, sind teil der Kreismenge, die den Kreis algebraisch beschreibt. Wie bei allen anderen Sektoren der Geometrie ist es von Nöten, das Ganze zu visualisieren:
 
         \begin{center}
             \definecolor{purp}{rgb}{0.5,0,0.5}
@@ -1403,7 +1403,7 @@
             \end{tikzpicture}
         \end{center}
 
-        \paragraph{} Hieraus ergibt sich eine einfache Formel, um einen Kreis zu definieren, aus welcher auch die allgemeine Kreisgleichung folgt:
+        Hieraus ergibt sich eine einfache Formel, um einen Kreis zu definieren, aus welcher auch die allgemeine Kreisgleichung folgt:
         \\
         \begin{align*}
             \qquad \qquad \qquad &|\vv{MP}| = r ; P \in M_K \text{ mit $M_k$ Kreismenge} \\
@@ -1413,7 +1413,7 @@
                  \Leftrightarrow &\left(\sqrt{(x - a)^2 + (y - b)^2}\right)^2 = r^2 \\
                  \Leftrightarrow &(x - a)^2 + (y - b)^2 = r^2 \\
         \end{align*}
-        \paragraph{} Wie die Graphik es bereits verdeutlicht, kann es von Nutzen sein mit einer Kreisscheibe zu arbeiten. Diese wird über die Menge der Punkte, die innerhalb des Kreises liegen, definiert.
+        Wie die Graphik es bereits verdeutlicht, kann es von Nutzen sein mit einer Kreisscheibe zu arbeiten. Diese wird über die Menge der Punkte, die innerhalb des Kreises liegen, definiert.
         Somit erschließt sich, dass jeglicher Punkt, der eine Entfernung zum Mittelpunkt, welche kleiner als der oder gleich dem Radius ist, teil dieser Kreisscheibe ist:
                                                     $$|\vv{MP}| \leq r ; P \in M_K$$
 
@@ -1426,7 +1426,7 @@
 
             \\
             \begin{Definition}
-                \paragraph{} Eine Tangente an einen Punkt eines Kreises ist vergleichbar mit der an einen Punkt einer Kurve. Sie ist gerade zu der Geraden equivalent, die \textbf{den Kreis in diesem Punkt berührt}. Dies impliziert auch, dass es nur eine Menge identischer Geraden gibt, welche erfolgreich als Tangente kandidieren können.
+                Eine Tangente an einen Punkt eines Kreises ist vergleichbar mit der an einen Punkt einer Kurve. Sie ist gerade zu der Geraden equivalent, die \textbf{den Kreis in diesem Punkt berührt}. Dies impliziert auch, dass es nur eine Menge identischer Geraden gibt, welche erfolgreich als Tangente kandidieren können.
             \end{Definition}
             \begin{center}
                 \definecolor{purp}{rgb}{0.5,0,0.5}
@@ -1467,7 +1467,7 @@
                 \end{tikzpicture}
             \end{center}
 
-            \paragraph{} Erneut liefert uns die Graphik eine generelle Formel:
+            Erneut liefert uns die Graphik eine generelle Formel:
             \\
             \begin{align*}
                 \qquad \qquad \qquad &\vv{MP} \odot \vv{PX} = 0 ; P \in M_K, X \in M_T \text{ mit $M_K$ und $M_T$ Kreis- und Tangentenmenge} \\
@@ -1480,14 +1480,14 @@
         \subsubsection{Polare an einen Kreis}
 
             \begin{Definition}
-                \paragraph{} Sei $\mathscr{C}$ ein Kreis mit Mittelpunkt $M$ und $P$ ein Punkt mit $|\vv{MP}| \nleq r$. Des Weiteren seien die zwei Tangenten(mengen) an den Kreis, die durch den Punkt $P$ gehen, gegeben. Dann bezeichnet man die Gerade, welche die Berührpunkte der Tangenten beinhaltet, als \textbf{Polare an den Kreis $\mathscr{C}$ zum Punkt P}.
+                Sei $\mathscr{C}$ ein Kreis mit Mittelpunkt $M$ und $P$ ein Punkt mit $|\vv{MP}| \nleq r$. Des Weiteren seien die zwei Tangenten(mengen) an den Kreis, die durch den Punkt $P$ gehen, gegeben. Dann bezeichnet man die Gerade, welche die Berührpunkte der Tangenten beinhaltet, als \textbf{Polare an den Kreis $\mathscr{C}$ zum Punkt P}.
             \end{Definition}
 
             \begin{Bemerkung}
                 Tatsächlich ist das nur die halbe Wahrheit, die Polare existiert für alle $P$ ungleich $M$. Sie landet dann außerhalb des Kreises und schneidet diesen nicht (berührt ihn in einem, wenn gilt $|\vv{MP}| = r$).
             \end{Bemerkung}
 
-            \paragraph{} Die Prozedur sollte allmählich bekannt vorkommen:
+            Die Prozedur sollte allmählich bekannt vorkommen:
 
             \begin{center}
                 \definecolor{purp}{rgb}{0.5,0,0.5}
@@ -1525,7 +1525,7 @@
                 \end{tikzpicture}
             \end{center}
 
-            \paragraph{} Wenn auch ein wenig um mehr Ecken gedacht als üblich:
+            Wenn auch ein wenig um mehr Ecken gedacht als üblich:
             \\
             \begin{align*}
                 \qquad \qquad \qquad &\left|\begin{array}{c} \vv{MB} \odot \vv{PB} = 0 \\ \vv{MP} \odot \vv{BX} = 0 \end{array}\right| \\
@@ -1539,7 +1539,7 @@
 
     \subsection{Sphären}
 
-        \paragraph{} Sphären werden wie Kreise über einen \textbf{Mittelpunkt} und einen \textbf{Radius} definiert. Alle Punkte, welche einen Distanz gleich dem Radius zum Mittelpunkt aufweisen, sind teil der Sphärenmenge, die die Sphäre algebraisch beschreibt:
+        Sphären werden wie Kreise über einen \textbf{Mittelpunkt} und einen \textbf{Radius} definiert. Alle Punkte, welche einen Distanz gleich dem Radius zum Mittelpunkt aufweisen, sind teil der Sphärenmenge, die die Sphäre algebraisch beschreibt:
 
         \begin{center}
             \definecolor{purp}{rgb}{0.5,0,0.5}
@@ -1563,9 +1563,9 @@
         \end{center}
 
         \begin{Theorem}[- Sphärengleichung]
-            \paragraph{} Eine Sphäre im $\R^n ; n \geq 3$ mit Mittelpunkt $M$ und Radius $r$ ist eindeutig über die folgende Gleichung definiert:
+            Eine Sphäre im $\R^n ; n \geq 3$ mit Mittelpunkt $M$ und Radius $r$ ist eindeutig über die folgende Gleichung definiert:
                                     $$|\vv{MP}| = r ; P \in M_{\mathscr{C}}$$
-            \paragraph{} Die allgebraische Formel lautet somit wie folgt:
+            Die allgebraische Formel lautet somit wie folgt:
                                     $$(x-a)^2 + (y-b)^2 + (z-c)^2 = r^2 ; (x,y,z) = (p_x,p_y,p_z) \land (a,b,c) = (m_x,m_y,m_z)$$
         \end{Theorem}
 
@@ -1584,7 +1584,7 @@
         \subsubsection{Tangenten an eine Sphäre}
 
             \begin{Definition}
-                \paragraph{} Die Tangente in einem Punkt an eine Sphäre unterscheidet sich nur in einer Eigenschaft von der an einen Kreis: mehrere nicht identische Geraden berühren eine Sphäre in einem Punkt. Tatsächlich stellt diese Menge von Geraden eine Ebene dar: die \textbf{Tangentialebene}.
+                Die Tangente in einem Punkt an eine Sphäre unterscheidet sich nur in einer Eigenschaft von der an einen Kreis: mehrere nicht identische Geraden berühren eine Sphäre in einem Punkt. Tatsächlich stellt diese Menge von Geraden eine Ebene dar: die \textbf{Tangentialebene}.
             \end{Definition}
 
             \begin{center}
@@ -1614,14 +1614,14 @@
             \end{center}
 
             \begin{Theorem}[- Tangentialebene]
-                \paragraph{} Für die Tangentialebene an eine Sphäre $\mathscr{C}$, mit Mittelpunkt $M$ und Radius $r$, in einem Punkt $P$ gilt:
+                Für die Tangentialebene an eine Sphäre $\mathscr{C}$, mit Mittelpunkt $M$ und Radius $r$, in einem Punkt $P$ gilt:
                                                     $$|\vv{MP}| = r$$
             \end{Theorem}
 
         \subsubsection{Polarebene?}
 
             \begin{Definition}
-                \paragraph{} Sei $\mathscr{C}$ eine Sphäre mit Mittelpunkt $M$ und $P$ ein Punkt mit $|\vv{MP}| \nleq r$. Des Weiteren seien die überabzählbar vielen Tangenten(mengen) an $\mathscr{C}$, die durch den Punkt $P$ gehen, gegeben. Dann bezeichnet man die Ebene, welche die Berührpunkte der Tangenten beinhaltet, als \textbf{Polare an die Sphäre $\mathscr{C}$ zum Punkt P}.
+                Sei $\mathscr{C}$ eine Sphäre mit Mittelpunkt $M$ und $P$ ein Punkt mit $|\vv{MP}| \nleq r$. Des Weiteren seien die überabzählbar vielen Tangenten(mengen) an $\mathscr{C}$, die durch den Punkt $P$ gehen, gegeben. Dann bezeichnet man die Ebene, welche die Berührpunkte der Tangenten beinhaltet, als \textbf{Polare an die Sphäre $\mathscr{C}$ zum Punkt P}.
             \end{Definition}
 
             \begin{center}
